# backend/cmd/api/endpoints/family_member_create.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
+	"github.com/oleexo/subtracker/internal/domain/user"
 
 	"github.com/oleexo/subtracker/internal/application/core"
 	"github.com/oleexo/subtracker/internal/application/family/command"
@@ -82,6 +83,14 @@ func (f FamilyMemberCreateEndpoint) Handle(c *gin.Context) {
 		return
 	}
 
+	userId, ok := user.FromContext(c)
+	if !ok {
+		c.JSON(http.StatusUnauthorized, httpError{
+			Message: "invalid user id",
+		})
+		return
+	}
+
 	var model createFamilyMemberModel
 	if err := c.ShouldBindJSON(&model); err != nil {
 		c.JSON(http.StatusBadRequest, httpError{
@@ -98,7 +107,7 @@ func (f FamilyMemberCreateEndpoint) Handle(c *gin.Context) {
 				r,
 				withStatus[family.Family](http.StatusCreated),
 				withMapping[family.Family](func(fm family.Family) any {
-					return newFamilyModel(fm)
+					return newFamilyModel(userId, fm)
 				}))
 			return result.Unit{}
 		},
